--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@ nav a {
   display: inline-block;
   background-color: #eee;
   border-radius: 4px;
+  margin-left: 5px;
 }
 nav a:visited,
 a:link {
