--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1>
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/reactive-forms">Reactive Forms</a>
-</nav>
+  <a routerLink="/dropdown">Dropdown</a>
+</nav> -->
 <router-outlet></router-outlet>
 <app-messages></app-messages>
