--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,11 +1,15 @@
 <div>
   <p>Child Component</p>
-  <p>parents inData.name: {{ copyData.name }}</p>
-  <p>parents inData.list: {{ copyData.list }}</p>
+  <p>parents inData.name: {{ inData.name }}</p>
+  <p>parents inData.list: {{ inData.list }}</p>
   <p>parents inList: {{ inList }}</p>
+  <p>child copyData.name: {{ copyData.name }}</p>
+  <p>child copyData.list: {{ copyData.list }}</p>
   <p>child list: {{ childList }}</p>
   <button (click)="onClickChange()">Change inData</button>
   <button (click)="onClickEmit()">Emit inData</button>
   <button (click)="onClickChangeList()">Change inList</button>
   <button (click)="onClickChangeChildList()">Change child list</button>
+  <p *ngIf="isValid">isValid</p>
+  <p *ngIf="getIsValid()">getIsValid</p>
 </div>
