--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -4,7 +4,7 @@
   <p>toChildData.list: {{ toChildData.list }}</p>
   <p>toChildList: {{ toChildList }}</p>
   <button (click)="onClickChange()">Change toChildData</button>
-  <button (click)="onClickSend()">Send Data</button>
+  <button (click)="onClickChangePart()">Change part of toChildData</button>
   <app-child
     [inData]="toChildData"
     [inList]="toChildList"
