--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,14 @@ button {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  _::-webkit-full-page-media,
+  _:future,
+  :root .css-hack {
+    position: fixed;
+    border: 1px solid red;
+    transform-origin: left top;
+    transform: scale(1.5, 1.5);
+  }
+}
