--- a/src/app/src/app/newtab/newtab.component.html
+++ b/src/app/src/app/newtab/newtab.component.html
@@ -1,5 +1,6 @@
 <div>
   <p>val={{ val }}</p>
   <p>val$={{ val$ | async }}</p>
-  <button style="display: block" (click)="onClickBtn()">val update</button>
+  <p>sessionStorageItem$={{ sessionStorageItem }}</p>
+  <button (click)="onClickBtn()">val update</button>
 </div>
